# ArmSimulator

./: .gitignore  LICENSE  README.md
src/armparser/: CMakeLists.txt  main.cpp
src/armparser/assembler/: ARMLexer.cpp  ARMLexer.h  ARMLexer.interp  ARMParser.cpp  ARMParser.h  ARMParser.interp  ARMParser.tokens  ARMParserBaseListener.cpp  ARMParserBaseListener.h  ARMParserBaseVisitor.cpp  ARMParserBaseVisitor.h  ARMParserListener.cpp  ARMParserListener.h  ARMParserVisitor.cpp  ARMParserVisitor.h
src/armparser/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
src/armparser/build-linux/antlr4_runtime/tmp/: antlr4_runtime-cache-.cmake  antlr4_runtime-cfgcmd.txt  antlr4_runtime-gitclone.cmake  antlr4_runtime-gitupdate.cmake
src/armparser/grammar/: ARMLexer.g4  ARMParser.g4
src/armparser/lib/: antlr4-runtime.exp  antlr4-runtime.lib
src/armparser/walker/: CommandVisitor.cpp  CommandVisitor.h
src/asmeditor/AsmEditor/: CMakeLists.txt  CMakeLists.txt.user.8bf2150  CMakeLists.txt.user.f0ce379  Resources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/asmeditor/AsmEditor/armparser/assembler/: ARMLexer.cpp  ARMLexer.h  ARMLexer.interp  ARMParser.cpp  ARMParser.h  ARMParser.interp  ARMParser.tokens  ARMParserBaseListener.cpp  ARMParserBaseListener.h  ARMParserBaseVisitor.cpp  ARMParserBaseVisitor.h  ARMParserListener.cpp  ARMParserListener.h  ARMParserVisitor.cpp  ARMParserVisitor.h
src/asmeditor/AsmEditor/armparser/grammar/: ARMLexer.g4  ARMParser.g4
src/asmeditor/AsmEditor/armparser/walker/: CommandVisitor.cpp  CommandVisitor.h
src/asmeditor/AsmEditor/armprocessor/: bits.cpp  bits.h  processor.cpp  processor.h
src/asmeditor/AsmEditor/armprocessor/architecture/: ALU.cpp  ALU.h  Aluops.h  CurrentProgramStatusRegister.h
src/asmeditor/AsmEditor/armprocessor/instructions/: Condition.h  Instruction.cpp  Instruction.h  SourceLocation.cpp  SourceLocation.h
src/asmeditor/AsmEditor/codearea/: BreakPointWidget.h  codearea.cpp  codearea.h  highlighter.cpp  highlighter.h  linenumberwidget.h
src/asmeditor/AsmEditor/consolewindow/: consolewindow.cpp  consolewindow.h
src/asmeditor/AsmEditor/managers/: filemanager.cpp  filemanager.h  processormanager.cpp  processormanager.h
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  AsmEditor.cbp  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/AsmEditor_autogen/: moc_predefs.h  mocs_compilation.cpp
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/AsmEditor_autogen/DWVBZFKGEL/: moc_processormanager.cpp
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/AsmEditor_autogen/USFMJESNH3/: moc_BreakPointWidget.cpp  moc_linenumberwidget.cpp
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/AsmEditor_autogen/include/: ui_mainwindow.h
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/antlr4_runtime/tmp/: antlr4_runtime-gitclone.cmake  antlr4_runtime-gitupdate.cmake
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Debug/armparser/: TEST.cbp  cmake_install.cmake
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  AsmEditor.cbp  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Release/AsmEditor_autogen/EWIEGA46WW/: qrc_Resources.cpp
src/asmeditor/build-AsmEditor-Desktop_Qt_5_12_8_MinGW_64_bit-Release/antlr4_runtime/tmp/: antlr4_runtime-gitclone.cmake  antlr4_runtime-gitupdate.cmake
src/asmeditor/build-AsmEditorDebug/: .ninja_deps  .ninja_log  AsmEditor.cbp  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
src/asmeditor/build-AsmEditorDebug/AsmEditor_autogen/DWVBZFKGEL/: moc_filemanager.cpp
src/asmeditor/build-AsmEditorDebug/AsmEditor_autogen/O4SWLRXBBP/: moc_consolewindow.cpp
src/asmeditor/build-AsmEditorDebug/AsmEditor_autogen/USFMJESNH3/: moc_codearea.cpp  moc_highlighter.cpp
src/asmeditor/build-AsmEditorDebug/AsmEditor_autogen/include/: ui_mainwindow.h
src/asmeditor/buildRelWithDeb/: .ninja_deps  .ninja_log  AsmEditor.cbp  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
src/asmeditor/buildRelWithDeb/AsmEditor_autogen/: moc_predefs.h
src/asmeditor/linrelease/: .ninja_deps  .ninja_log  AsmEditor  AsmEditor.cbp  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
src/asmeditor/linrelease/ArmSimulatorLinuxV_0_4/: libdl.so.2  libgcc_s.so.1  libglib-2.0.so.0  liblzma.so.5  libm.so.6  libpcre.so.1  libpthread.so.0  librt.so.1  libsystemd.so.0
src/asmeditor/linrelease/AsmEditor_autogen/: moc_predefs.h  mocs_compilation.cpp
(+75 files in other folders)
